# amplifier-collection-metacognition

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TEST_RESULTS.md  pyproject.toml
agents/: complexity-assessor.md  ensemble-coordinator.md  iterative-refiner.md  solution-evaluator.md
amplifier_collection_metacognition/: __init__.py
context/: complexity-signals.md  poetiq-patterns.md  scoring-rubrics.md
docs/: PERFORMANCE.md  TROUBLESHOOTING.md
examples/: example-complex.md  example-critical.md  example-medium.md  example-simple.md
examples/code/: README.md  basic_usage.py  error_handling.py  iterative_workflow.py
profiles/: metacognitive.md
tests/: conftest.py  test_practical_scenarios.py
tests/test_agents/: test_agent_configs.py  test_agent_references.py  test_agent_schemas.py
tests/test_behavior/: __init__.py  test_agent_behavior.py
tests/test_integration/: test_agent_loading.py  test_workflows.py
